added some more features

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -407,7 +407,7 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item">
+                        <li class="sidebar-item" id="leveller-btn">
                             <a class="sidebar-link {% block summer_active %} {% endblock %}"
                                 href="{% url 'student_flames' %}" aria-expanded="false">
                                 <span>
@@ -440,43 +440,7 @@
 
                         {% endcomment %}
 
-                        <!-- ========================== PRACTICE ================================== -->
-
-                        <li class="nav-small-cap">
-                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                            <span class="hide-menu">PRACTICE</span>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link {% block pp_active %} {% endblock %}" href="{% url 'problem_set' %}"
-                                aria-expanded="false">
-                                <span>
-                                    <i class="ti ti-rocket"></i>
-                                </span>
-                                <span class="hide-menu">Practice Problems 💀</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item" id="leveller-btn">
-                            <a class="sidebar-link {% block sheet_active %} {% endblock %}" href="{% url 'practice' %}"
-                                aria-expanded="false">
-                                <span class="text-white">
-                                    <i class="ti ti-crown"></i>
-                                </span>
-                                <span class="hide-menu text-white">Angaari Sheets🔥</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link {% block leveller_active %} {% endblock %}"
-                                href="{% url 'leveller' %}" aria-expanded="false">
-                                <span>
-                                    <i class="ti ti-trophy"></i>
-                                </span>
-                                <span class="hide-menu">Leveller🔥🔥</span>
-                            </a>
-                        </li>
-
-                        <!-- ========================= EXTRA LEARNING ============================= -->
+                        <!-- ========================= LEARNING ============================= -->
                         <li class="nav-small-cap">
                             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                             <span class="hide-menu">Learning</span>
@@ -499,6 +463,44 @@
                                 <span class="hide-menu">Samadhaan AI🧠</span>
                             </a>
                         </li>
+
+
+                        <!-- ========================== PRACTICE ================================== -->
+
+                        <li class="nav-small-cap">
+                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                            <span class="hide-menu">PRACTICE</span>
+                        </li>
+
+                        <!-- <li class="sidebar-item">
+                            <a class="sidebar-link {% block pp_active %} {% endblock %}" href="{% url 'problem_set' %}"
+                                aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-rocket"></i>
+                                </span>
+                                <span class="hide-menu">Practice Problems 💀</span>
+                            </a>
+                        </li> -->
+
+                        <!-- <li class="sidebar-item" >
+                            <a class="sidebar-link {% block sheet_active %} {% endblock %}" href="{% url 'practice' %}"
+                                aria-expanded="false">
+                                <span class="text-white">
+                                    <i class="ti ti-crown"></i>
+                                </span>
+                                <span class="hide-menu text-white">Angaari Sheets🔥</span>
+                            </a>
+                        </li> -->
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block leveller_active %} {% endblock %}"
+                                href="{% url 'leveller' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-trophy"></i>
+                                </span>
+                                <span class="hide-menu">Leveller🔥🔥</span>
+                            </a>
+                        </li>
+
 
 
 
