--- a/templates/student/flames/view_registration.html
+++ b/templates/student/flames/view_registration.html
@@ -211,8 +211,8 @@ active
                 <i class="ti ti-arrow-left me-1"></i> Back to Courses
             </a>
             {% if registration.status == 'Approved' %}
-            <a href="#" class="btn btn-primary">
-                <i class="ti ti-book me-1"></i> Access Course Material
+            <a href="#" class="btn btn-outline-success disabled">
+                <i class="ti ti-book me-1"></i> Course Material Coming Soon!
             </a>
             {% endif %}
         </div>
